--- a/content/30DEC20.md
+++ b/content/30DEC20.md
@@ -17,3 +17,11 @@ So, what do I do about it?  Fortunately, GIT (that's Georgia Institute for Techn
 
 One hint that John passed on to be through his education trials, was: Anytime a text says, it can be easiely shown that...  Go ahead and show it.  This textbook has plenty of opportunities to do so.  Today I did about 1/3 of the first of 4 linear algebra classes.  Judging by the book, that take me to about chapter 2.3 in the text.  So, tomorrow, I am going to "show" all the things that can be easily shown.  In otherwords, I am going to do all the examples in the book to supply the rigor that the 800 dollar fee was supposed to provide.
 
+Update:  Found some more problem sets that I am going to share, that is if you are interested in learning linear algebra on your own as well
+
+There is this one from UC Davis:
+** <https://www.math.ucdavis.edu/~linear/problem_sets.pdf> **
+
+And this one from MIT:
+
+** <http://web.mit.edu/18.06/www/Spring02/probsets/> **
