new posts and updated posts

--- a/content/30DEC20.md
+++ b/content/30DEC20.md
@@ -24,4 +24,4 @@ There is this one from UC Davis:
 
 And this one from MIT:
 
-** <http://web.mit.edu/18.06/www/Spring02/probsets/> **
+** <http://web.mit.edu/18.06/www/Spring02/probsets/> **pel
