new post and post updates

--- a/content/30DEC20.md
+++ b/content/30DEC20.md
@@ -19,9 +19,10 @@ One hint that John passed on to be through his education trials, was: Anytime a 
 
 Update:  Found some more problem sets that I am going to share, that is if you are interested in learning linear algebra on your own as well
 
-There is this one from UC Davis:
+** There is this one from UC Davis: **
+
 ** <https://www.math.ucdavis.edu/~linear/problem_sets.pdf> **
 
-And this one from MIT:
+** And this one from MIT: **
 
-** <http://web.mit.edu/18.06/www/Spring02/probsets/> **pel
+** <http://web.mit.edu/18.06/www/Spring02/probsets/> **
